# ksef

./: CHANGELOG.md  README.md  README.pl.md  git-conventional-commits.yaml  justfile  openapi.json  pyproject.toml  pyrightconfig.json  test-coverage.json
.github/workflows/: ci.yml  docs-check.yml  integration-tests.yml  publish.yml  update-spec.yml
docs/: README.md  api-ergonomics-review.md  docs.manifest.json  intro.md
docs/contributing/: sync-codegen.md
docs/en/: intro.md
docs/en/contributing/: sync-generation.md
docs/en/getting-started/: quickstart.md
docs/en/guides/: admin.md  client.md  errors.md  fa3-builder.md  invoices.md  public-api.md
docs/en/raw/: authentication.md  endpoint-map.md  overview.md  sessions-invoices.md
docs/en/workflows/: authentication.mdx  building-invoices.mdx  certificates.mdx  client-setup.mdx  downloading-invoices.mdx  encryption-certificates.mdx  limits.mdx  overview.mdx  peppol.mdx  permissions.mdx  querying-invoices.mdx  sending-invoices.mdx  status-upo.mdx  test-data.mdx  tokens.mdx  xades.mdx
docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/guides/: async-client.md  authentication.md  certificates.md  encryption.md  errors.md  fa3-builder.md  invoices.md  limits.md  peppol.md  permissions.md  sessions.md  testdata.md  tokens.md
docs/pl/: intro.md
docs/pl/contributing/: sync-codegen.md  sync-generation.md
docs/pl/getting-started/: authentication.md  installation.md  quickstart.md
docs/pl/guides/: admin.md  async-client.md  authentication.md  certificates.md  client.md  encryption.md  errors.md  fa3-builder.md  invoices.md  limits.md  peppol.md  permissions.md  public-api.md  sessions.md  testdata.md  tokens.md
docs/pl/raw/: authentication.md  endpoint-map.md  overview.md  sessions-invoices.md
docs/pl/workflows/: limits.mdx  (+15 more)
plans/: 01-1.0-readiness.md  07-unasync-codegen.md  README.md
scripts/: demo_extra_ignore.py  gen_sync.py  repl_new_fa3_builder.py  sync_ksef_api_version.py  validate_docs_frontmatter.py
scripts/examples/: README.md  _common.py  demo_prepare_testdata.py  quickstart.py
src/ksef2/: __init__.py  config.py  xades.py
tests/integration/: conftest.py  invoice_payload.py  sample_invoice.py  test_batch_session.py  test_certificates.py  test_cli_export_invoices.py  test_examples.py  test_invoices_status.py  test_limits.py  test_permissions.py  test_session_workflow.py  test_token_lifecycle.py  test_token_refresh.py
tests/unit/: conftest.py  helpers.py  test_fa3_advance_payment_models.py  test_fa3_attachment_models.py  test_fa3_correction_party_models.py  test_fa3_drafts.py  test_fa3_invoice_models.py  test_fa3_order_models.py  test_fa3_public_api.py  test_fa3_settlement_models.py  test_fa3_transaction_models.py  test_generated_sync.py  test_imports.py  test_raw.py  test_shared_refactor_helpers.py  test_sync_async_parity.py  test_verification_urls.py
(+273 files in other folders)
