[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ksef2"
version = "0.13.2"
description = "Python SDK and Tools for Poland's KSeF (Krajowy System e-Faktur) API"
readme = "README.md"
requires-python = ">=3.11"
pythonpath = "src"
dependencies = [
    "pydantic>=2.12.5",
    "cryptography>=44.0.0",
    "signxml>=4.0",
    "httpx[http2]>=0.28.1",
    "structlog>=25.5.0",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "xsdata-pydantic>=24.5",
    "weasyprint>=63.0",
    "tenacity>=9.0",
    "polyfactory>=3.3.0",
    "beartype>=0.22.9",
    "camel-converter>=5.1.0",
    "pytest-cov>=7.1.0",
    "xsdata>=26.1",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
    "ruff>=0.15.0",
    "pytest>=8.0",
    "respx>=0.22.0",
    "lxml-stubs>=0.5.1",
    "commitizen>=4.13.9",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
]
codegen = [
    "datamodel-code-generator[ruff]>=0.53.0",
    "xsdata-pydantic[cli,lxml,soap]>=24.5",
    "xsdata[cli,lxml]>=24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the real KSeF TEST environment",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.13.2"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/ksef2/__version__.py"
]


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
ignore = ["E731", "E402"]
